Update document menu (early push because supabase is currently down)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_SUPABASE_URL=<your_supabase_project_url>
 NEXT_PUBLIC_SUPABASE_ANON_KEY=<your_supabase_anon_key>
 NEXT_PUBLIC_REDIRECT_URL=<your_google_callback_url>
+TIPTAP_APP_ID=<your_tiptap_app_id>
+TIPTAP_TOKEN=<your_tiptap_token>
