--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=<your_supabase_anon_key>
 NEXT_PUBLIC_REDIRECT_URL=<your_google_callback_url>
 NEXT_PUBLIC_TIPTAP_APP_ID=<your_tiptap_app_id>
 NEXT_PUBLIC_TIPTAP_TOKEN=<your_tiptap_token>
+DEEPSEEK_API_KEY=<your_deepseek_api_key>
